--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,21 @@
-#top {
+body {
+    background-color: #f2f2f2;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.top {
     background-color: #000000;
     color: #ffffff;
     text-align: center;
     padding: 5px;
+    transition:0.35s;
 }
 
-#bottom {
+.top:hover {
+    background-color: gray;
+}
+
+.bottom {
     background-color: blue;
     color: #ffffff;
     clear: both;
