--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,11 +50,14 @@ body, html {
     padding: 50px;
 }
 
-.home {
+#home {
     background-color: #284B63;
     color: #f2f2f2;
 }
 
+#about {
+    background-color: #f2f2f2;
+}
 #console {
     margin: 40px;
     margin-top: 20px;
@@ -126,4 +129,15 @@ ul {
     height: 400px;
     margin: 10px;
     border-radius: 4px;
+}
+
+.arrow
+{
+  position: absolute;
+  width: 34px;
+  height: 12px;
+  margin: 20px;
+  bottom: 10px;
+  background-image: url("assets/arrow_white.png");
+  background-size: contain;
 }
